# CompiladorPascal

./: ParserTest.java  README.md  RissatiGianLuka.rar  teste  teste.cpp  teste.pas  teste.ps  teste_erro.pas  usefulcommands.txt
MyCompiler/: CMakeLists.txt  README.md
MyCompiler-1/: CMakeLists.txt  README.md
MyCompiler-1/src/: ast.hpp  main.cpp  parser.hpp  semantic_analyzer.cpp  semantic_analyzer.hpp  tokenization.hpp
MyCompiler/src/: main.cpp  parser.hpp  semantic_analyzer.cpp  semantic_analyzer.hpp  tokenization.hpp
RissatiGianLuka/: CMakeLists.txt  README.txt
RissatiGianLuka/src/: analisador_semantico.hpp  main.cpp  parser.hpp  tokenization.hpp
buildBinaria/: CMakeCache.txt  Makefile  cmake_install.cmake  compiler
buildBinaria2/: CMakeCache.txt  Makefile  cmake_install.cmake  compiler
src/: analisador_semantico.cpp  main.cpp  parser.hpp  parser2.hpp  tokenization.hpp
